--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "realestate-management-system",
   "version": "1.0.0",
   "description": "node js and express js technologies",
-  "main": "index.js",
+  "main": "api/index.js",
+   "type":"module",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "nodemon api/index.js"
   },
   "author": "longar Aker",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
