--- a/real-app/package.json
+++ b/real-app/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-slick": "^0.31.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.13"
   },
